dbeaver/pro#5728 Deps fixes. Logback bundle